# my_cmake_examples

./: README.md
packaging/: CMakeLists.txt  README.md  license.txt
packaging/cmake/: MyPackageSettings.cmake  RpmDebPackageSettings.cmake
packaging/cmake/WIX/: FindWIXHeat.cmake  MyPackageWIX.cmake  WIX.template.in  WIX_MergeModule.wxs.in  mergeVCRedist.wxs.in
packaging/contrib/deb/: conffiles.in
